--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-doc/snmp/index.html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>It Works!</title>
+    <meta http-equiv="refresh" content="0; url=/rust-snmp/snmp/index.html" />
+</head>
+<body>
+
+</body>
+</html>
